[package]
name = "cloudtruth"
version = "0.5.0"
description = "A command-line interface to the CloudTruth configuration management service."
authors = ["CloudTruth <support@cloudtruth.com>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://cloudtruth.com/"
repository = "https://github.com/cloudtruth/cloudtruth-cli"
readme = "README.md"
build = "build.rs"

[package.metadata.deb]
assets = [
    ["target/release/cloudtruth", "usr/bin/", "755"],
    ["target/release/completions/cloudtruth.bash", "usr/share/bash-completion/completions/cloudtruth", "644"],
    ["target/release/completions/cloudtruth.fish", "usr/share/fish/vendor_completions.d/cloudtruth.fish", "644"],
    ["target/release/completions/_cloudtruth", "usr/share/zsh/vendor-completions/_cloudtruth", "644"],
    ["README.md", "usr/share/doc/cloudtruth/", "644"],
]
extended-description = """\
The cloudtruth CLI provides an easy way to script actions related to configuration
data you have stored within the CloudTruth configuration management service.
"""
depends = "$auto, ca-certificates"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
clap = "2.33.3"

[dependencies]
clap = "2.33.3"
color-eyre = "0.5"
directories = "3.0"
edit = "0.1.2"
env_logger = "0.8"
graphql_client = "0.9.0"
indoc = "1.0"
once_cell = "1.5"
prettytable-rs = "0.8.0"
reqwest = { version = "0.11.0", features = ["blocking", "json"] }
rpassword = "5.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
subprocess = "0.1"
termcolor = "1.1"

[dev-dependencies]
assert_cmd = "1.0"
assert_matches = "1.4"
predicates = "1.0"
rusty-hook = "0.11"
serial_test = "0.5"
