[package]
name = "cloudtruth"
version = "1.1.8"
description = "A command-line interface to the CloudTruth configuration management service."
authors = ["CloudTruth <support@cloudtruth.com>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://cloudtruth.com/"
repository = "https://github.com/cloudtruth/cloudtruth-cli"
readme = "README.md"
build = "build.rs"

[package.metadata.deb]
assets = [
    ["target/release/cloudtruth", "usr/bin/", "755"],
    ["target/release/completions/cloudtruth.bash", "usr/share/bash-completion/completions/cloudtruth", "644"],
    ["target/release/completions/cloudtruth.fish", "usr/share/fish/vendor_completions.d/cloudtruth.fish", "644"],
    ["target/release/completions/_cloudtruth", "usr/share/zsh/vendor-completions/_cloudtruth", "644"],
    ["README.md", "usr/share/doc/cloudtruth/", "644"],
]
extended-description = """\
The cloudtruth CLI provides an easy way to script actions related to configuration
data you have stored within the CloudTruth configuration management service.
"""
depends = "$auto, ca-certificates"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
clap = "2.33.3"

[dependencies]
aes-gcm = "0.9.2"
base64 = "0.13.0"
chacha20poly1305 = "0.8.0"
chrono = "0.4.23"
clap = "2.33.3"
cloudtruth-restapi = { path = "client" }
color-eyre = "0.5"
csv = "1.1.6"
directories = "3.0"
edit = "0.1.2"
env_logger = "0.8"
hex = "0.4.3"
hkdf = "0.11.0"
indoc = "1.0"
once_cell = "1.5"
prettytable-rs = "0.8.0"
powershell_script = "0.2.1"
rand_core = {version = "0.6.2", features = ["getrandom"]}
# reqwest version must match client package
reqwest = "~0.9"
rpassword = "5.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
serde_yaml = "0.8"
sha2 = "0.9.5"
similar = "2.0.0"
subprocess = "0.1"
tempfile = "3.2.0"
termcolor = "1.1"
urlencoding = "2.1.0"
version-compare = "0.1.0"
webbrowser = "0.5.5"

[dev-dependencies]
assert_cmd = "1.0"
assert_matches = "1.4"
predicates = "1.0"
rusty-hook = "0.11"
serial_test = "0.5"
