[package]
name = "ci"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.69"
askama = "0.11.1"
clap = { version = "4.1.6", default-features = false, features = ["derive", "help", "usage", "std"] }
itertools = "0.10.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
serde_plain = "1.0.1"
serde_yaml = "0.9.17"
