[package]
name = "ci"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.69"
askama = "0.11.1"
clap = { version = "4.1.6", default-features = false, features = ["derive", "help", "usage", "std"] }
duct = "0.13.6"
futures = "0.3.27"
itertools = "0.10.5"
once_cell = "1.17.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
serde_plain = "1.0.1"
serde_yaml = "0.9.17"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.12"
