[package]
name = "cloudtruth-config"
version = "1.2.4"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
cloudtruth-restapi = { path = "../cloudtruth-restapi" }
color-eyre = "0.6.2"
directories = "5.0.0"
indoc = "2.0.1"
once_cell = "1.17.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"

[dev-dependencies]
assert_matches = "1.5.0"
serial_test = "1.0.0"
