[package]
name = "cloudtruth-installer"
description = "Local installation manager for CloudTruth"
version = "1.2.3"
edition = "2021"
license = "Apache-2.0"

[dependencies]
clap = { version = "4.0.0", features = ["derive", "env"] }
color-eyre = "0.6"
derive_more = "0.99.17"
itertools = "0.10.5"
octocrab = "0.21"
once_cell = "1.17.1"
powershell_script = "1.0.4"
reqwest = { version = "~0.9", default-features = false, features = ["default-tls-vendored"] }
serde_json = "1.0"
tempfile = "3.4"
which = "4.4.0"
