[package]
name = "cloudtruth-installer"
version = "1.2.3"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
powershell_script = "1.0.4"
reqwest = { version = "~0.9", default-features = false, features = ["default-tls-vendored"] }
serde_json = "1.0.94"
tempfile = "3.4.0"
