[package]
name = "cloudtruth-installer"
description = "Local installation manager for CloudTruth"
version = "1.2.3"
edition = "2021"
license = "Apache-2.0"

[dependencies]
bytes = "1.4"
ci_info = "0.14"
clap = { version = "4.0.0", features = ["derive", "env"] }
color-eyre = "0.6"
derive_more = "0.99"
flate2 = "1.0"
futures-core = "0.3"
futures-util = "0.3"
is-terminal = "0.4"
octocrab = { version = ">=0.22.0" }
once_cell = "1.17"
reqwest = { version = "~0.11", default-features = false, features = ["stream", "rustls-tls-native-roots"] }
serde_json = "1.0"
tar = "0.4"
tempfile = "3.4"
tokio = { version = "1.28", features = ["full"] }
which = "4.4"
