[package]
name = "cloudtruth-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.18.0"
reqwest = { version = "0.11.18", features = ["rustls-tls-native-roots", "json", "gzip", "blocking"] }
