[package]
name = "integration-test-harness"
version = "1.2.0"
edition = "2021"
license = "Apache-2.0"

[features]
default = ["macros"]
macros = ["dep:integration-test-macros"]

[dependencies]
assert_cmd = "2.0.10"
backtrace = "0.3.67"
cloudtruth-config = { path = "../cloudtruth-config" }
commandspec = "0.12.2"
derive_more = "0.99.17"
integration-test-macros = { path = "../integration-test-macros", optional = true }
miette = { version = "5.6.0", features = ["fancy"] }
owo-colors = "3.5.0"
predicates = "3.0.2"
thiserror = "1.0.40"
uuid = { version = "1.3.0", features = ["v4", "fast-rng"] }
