[package]
name = "cloudtruth-test-harness"
version = "1.2.3"
edition = "2021"
license = "Apache-2.0"

[features]
default = ["macros"]
macros = ["dep:cloudtruth-test-macros"]

[dependencies]
anyhow = "1.0.70"
assert_cmd = "2.0.10"
backtrace = "0.3.67"
cloudtruth-config = { path = "../../crates/cloudtruth-config" }
derive_more = "0.99.17"
dunce = "1.0.4"
cloudtruth-test-macros = { path = "../macros", optional = true }
miette = { version = "5.6.0", features = ["fancy"] }
once_cell = "1.17.1"
owo-colors = "3.5.0"
predicates = "3.0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
shlex = "1.1.0"
tempfile = "3.5.0"
thiserror = "1.0.40"
uuid = { version = "1.3.0", features = ["v4", "fast-rng"] }
chrono = { version = "0.4.26", features = ["serde"] }
indexmap = { version = "2.0.0", features = ["serde"] }
backtrace-ext = "0.2.1"

[target.'cfg(not(windows))'.dependencies]
signal-hook = "0.3.17"
